# game-quiz-FastApi-Mongodb-

./: .env  .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  setenv.ps1
src/: main.py
src/api/: dependencies.py
src/core/: settings.py
src/database/: connection.py
src/database/repositories/: base.py  question.py
src/domain/: question.py
src/models/: choice.py  question.py
src/routes/: __init__.py  core.py  question.py
src/schemas/: base.py  question.py
