[tool.poetry]
name = "quiz-game"
version = "0.1.0"
description = ""
authors = ["Enrico Marquez <enricovmarquezz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
odmantic = "^0.9.2"
uvicorn = "^0.23.2"
pydantic = "==1.*"
yarl = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
